nginx-ingress-helm-chart/templates/frontend-ingress.yaml
# Source: webapp-helm-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: videos-web-ingress
  namespace: frontend
spec:
  ingressClassName: nginx
  rules:
    - host: kubees.videos.app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: videos-web
                port:
                  number: 80
